# PCoT

./: .gitignore  LICENSE  README.md  persuasion_groups.yaml  persuasion_one_detailed_multistep.sh  persuasion_one_detailed_task_at_a_time.sh  persuasion_one_multistep.sh  persuasion_one_task_at_a_time.sh  pyproject.toml  run_pcot_ensemble_one_detailed_task_at_a_time.sh  run_pcot_ensemble_one_task_at_a_time.sh  run_pcot_one_detailed_multistep.sh  run_pcot_one_detailed_task_at_a_time.sh  run_pcot_one_multistep.sh  run_pcot_one_task_at_a_time.sh  simple_detection.sh  simple_detection_with_persuasion.sh  test.py
Llama-3.1-8B/: basic.py
data/CoAID/: test.csv  train.csv  validation.csv
data/ECTF/: test.csv  train.csv  validation.csv
data/EUDisinfo/: original.csv  test.csv
data/ISOTFakeNews/: test.csv
data/MultiDis/: full_dataset.csv  sources.txt  test.csv
prompts/: one_prompt.yaml  pcot_final_step.yaml  persuasion_knowledge_infusion.yaml  simple_detection.yaml
results/Llama-3.1-8B-Instruct/CoAID/PCoT_One_Detailed_MultiStep/DeF_Spec/: final.csv
results/Llama-3.1-8B-Instruct/CoAID/PCoT_One_Detailed_MultiStep/VaN/: final.csv
results/Llama-3.1-8B-Instruct/CoAID/PCoT_One_Detailed_MultiStep/Z-CoT/: final.csv
results/Llama-3.1-8B-Instruct/ECTF/PCoT_One_Detailed_MultiStep/: persuasion_and_explanation.csv
results/Llama-3.1-8B-Instruct/ECTF/PCoT_One_Detailed_MultiStep/DeF_Spec/: final.csv
results/Llama-3.1-8B-Instruct/ECTF/PCoT_One_Detailed_MultiStep/VaN/: final.csv
src/: pcot_final.py  simple_detection_and_persuasion_step.py
src/utils/: utils.py
(+1 files in other folders)
