[project]
name = "pcot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.14"
dependencies = [
    "chardet>=5.2.0",
    "openai==1.58.1",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "scikit-learn>=1.6.0",
    "tqdm==4.67.1",
    "trafilatura>=2.0.0",
]
